tests/ui/feature-gates/feature-gate-unsafe-attributes.stderr
error[E0658]: `#[unsafe()]` markers for attributes are experimental
  --> $DIR/feature-gate-unsafe-attributes.rs:1:3
   |
LL | #[unsafe(no_mangle)]
   |   ^^^^^^
   |
   = note: see issue #123757 <https://github.com/rust-lang/rust/issues/123757> for more information
   = help: add `#![feature(unsafe_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
