tests/ui/feature-gates/feature-gate-unsafe-attributes.rs
#[unsafe(no_mangle)] //~ ERROR [E0658]
extern "C" fn foo() {

}

fn main() {
    foo();
}
